Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999-2001  Horms <horms@vergenet.net>
----------------------------------------------------------------------

xxx
(Horms)

  * Version 0.1.8
  - Fixed Segmentation Fault that occurs when reading strings that
    have a trainling whitespace during the authentication phase.
    Thanks to Ronny Cook
  - Fixed Linking Problems in MySQL, PostgresSQL and LDAP 
    map lookup libraries.
  - Fixed (minor) casting problems with using various popt calls
  - Correct handling of litereals quoted with \" characters in
    IMAP mode.
  - Removed mutiple calls to dlerror() for a single error
  - A modified S|strip_domain option such that domain may optionally be
    stripped for zero or more of: database lookup, local authentication,
    remote login.
  - Updated documenation of MySQL module Matt Prigge

5th April 2001
(Horms)

   * Version 0.1.7
   - Red Hat init script reports status correctly
   - Fixed minor spelling errors in documentation
   - Added missing library symlings to spec file
   - Server ok line option fixed. Was expecting arguments when it
     has none.
   - Added -lresolv and -lvanessa_logger to build for perdition
     itself to fix compile problems under solaris
   - Added ability to specify columns in MySQL module
     Geoff Mitchell
   - Running perdition.pop3 and perdition.imap4 now automatically
     runs perdition in POP3 or IMAP4 mode respectively
   - Added connection loging to interaction between perdition
     and clients may be logged for debugging purposes
   - UID in LDAP URL now specified using %s instead of %25s
     (Chris Stratford)

----------------------------------------------------------------------

9th January 2001
(Horms)

   * Version 0.1.6
   - Fixed Bug in specifying port of PostgreSQL server.
     Thanks to Michael J. Maravillo.
   - Fixed Bug in reporting of reauthenication failures in IMAP4 mode
     Thanks to Mike Shirobokov