@@ -170,6 +170,15 @@
 #u nobody
 #username nobody
 
+# U|username_from_database:
+# If  the  servername  in the popmap specified in the form:
+# user<delimiter>domain then use  the  username given  by the servername.
+# If a servername is given in this form then the domain will be used  as
+# the server to connect   to,  regarless  of  it  the
+# U|username_from_database option is specified  or not.
+#U
+#username_from_database
+
 # q|quiet:
 # Only log errors. Overriden by d|debug
 #q
