@@ -200,11 +200,18 @@ Username to run as.
 .br
 (default "nobody")
 .TP
+.B \-U, \-\-username_from_database:
+If the servername in the popmap specified in the form:
+user<delimiter>domain then use the username given by the servername.  If a
+servername is given in this form then the domain will be used as the server
+to connect to, regarless of it the -U|\-\-username_from_database option is
+specified or not.
+.TP
 .B \-q, \-\-quiet:
 Only log errors. Overridden by \-d|\-\-debug
 .TP
 \fBNote:\fP Default value for binary flags is off.
-.SH USER DATABASE
+.SH USER DATABASE (POPMAP)
 For information on mechanisms for resolving users to a host and port and
 information on the -M|--map_library and -m|--map_library_opt flags, please
 see \fBperditiondb\fP(5).
